[fix](variant) Adapt Iceberg Variant reader to branch-4.1