@@ -20,15 +20,14 @@ package org.apache.doris.datasource.iceberg;
 import org.apache.doris.analysis.TableScanParams;
 import org.apache.doris.analysis.TableSnapshot;
 import org.apache.doris.catalog.Column;
-import org.apache.doris.catalog.Env;
 import org.apache.doris.catalog.StructField;
 import org.apache.doris.catalog.Type;
 import org.apache.doris.common.UserException;
 import org.apache.doris.common.security.authentication.ExecutionAuthenticator;
 import org.apache.doris.datasource.iceberg.source.IcebergTableQueryInfo;
 import org.apache.doris.nereids.exceptions.AnalysisException;
-import org.apache.doris.qe.ConnectContext;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.apache.iceberg.BaseTable;
 import org.apache.iceberg.GenericPartitionFieldSummary;
@@ -362,12 +361,12 @@ public class IcebergUtilsTest {
     @Test
     public void testIcebergWriteRejectsRootAndNestedVariant() {
         Type variant = IcebergUtils.icebergTypeToDorisType(Types.VariantType.get(), false, false);
-        for (Column column : List.of(
+        for (Column column : ImmutableList.of(
                 new Column("payload", variant),
                 new Column("nested", new org.apache.doris.catalog.StructType(
-                        new ArrayList<>(List.of(new StructField("payload", variant))))))) {
+                        new ArrayList<>(ImmutableList.of(new StructField("payload", variant))))))) {
             try {
-                IcebergUtils.validateWriteSchema(List.of(column));
+                IcebergUtils.validateWriteSchema(ImmutableList.of(column));
                 Assert.fail("Iceberg writes must be rejected until the writer supports Variant");
             } catch (AnalysisException e) {
                 Assert.assertTrue(e.getMessage().contains("VARIANT"));
